--- a/src/components/Clients/Add/Add.css
+++ b/src/components/Clients/Add/Add.css
@@ -14,6 +14,34 @@
     color: grey;
 }
 
+/* Login modal in theme setup */
+.page {
+    margin-top: 10px;
+    width: 200px;
+    height: 120px;
+    border-radius: 8px;
+    background-color: #F5F5F5;
+    border: 2px solid #F5F5F5;
+}
+
+.page-selected {
+    border: 2px solid #153AC7;
+}
+
+.login-modal {
+    position: relative;
+    top: 10px;
+    margin-inline: 10px;
+
+    height: 100px;
+    width: 60px;
+    border-radius: 8px;
+    background-color: #153AC7;
+}
+
+.float-center {
+    margin-inline: auto;
+}
 
 @media only screen and (max-width: 865px) {
     .col-inputs {
