--- a/src/components/Clients/Add/Add.css
+++ b/src/components/Clients/Add/Add.css
@@ -43,6 +43,12 @@
     margin-inline: auto;
 }
 
+.visibleToClient {
+    width: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
 @media only screen and (max-width: 865px) {
     .col-inputs {
         width: 100%;
